<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tileSelectTitle"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="24dp"
        android:text="@string/prefsTileTitle"
        android:textSize="24sp" />

    <ImageButton
        android:id="@+id/redYellowImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:background="@null"
        android:src="@drawable/red_yellow_unselect" />

    <ImageButton
        android:id="@+id/blackWhiteImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_toLeftOf="@+id/redYellowImgBtn"
        android:src="@drawable/black_white_unselect" />

    <TextView
        android:id="@+id/timedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/blackWhiteImgBtn"
        android:textSize="24sp"
        android:layout_marginTop="40dp"
        android:text="@string/prefsTimedTitle" />

    <CheckBox
        android:id="@+id/timedCheck"
        android:layout_width="wrap_content"
        android:layout_height="24sp"
        android:layout_alignBaseline="@+id/timedTitle"
        android:layout_alignBottom="@+id/timedTitle"
        android:layout_alignRight="@+id/redYellowImgBtn"
        android:text="" />

    <TextView
        android:id="@+id/soundTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/timedCheck"
        android:layout_marginTop="40dp"
        android:text="@string/prefsSoundTitle" />
    
    <CheckBox
        android:id="@+id/soundCheck"
        android:layout_width="wrap_content"
        android:layout_height="24sp"
        android:layout_alignBaseline="@+id/soundTitle"
        android:layout_alignBottom="@+id/soundTitle"
        android:layout_alignRight="@+id/redYellowImgBtn"
        android:text="" />
    
    <TextView
        android:id="@+id/timeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/soundCheck"
        android:layout_marginTop="40dp"
        android:text="@string/prefsSecondsTitle" />

    <EditText
        android:id="@+id/secondsEditText"
        android:layout_width="80dp"
        android:maxLength="3"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/timeTitle"
        android:layout_alignRight="@+id/redYellowImgBtn"
        android:ems="10"
        android:inputType="number" >
    </EditText>

    <Button
        android:id="@+id/prefsSaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/save" />

</RelativeLayout>